--- a/stronaapple/Apple.html
+++ b/stronaapple/Apple.html
@@ -10,27 +10,20 @@
 <body>
     <nav class="globalnav">
             <ul class="globolnav-list">
-                <li>
-                    <div class="content">
-                        <a href><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Apple_logo_grey.svg/1724px-Apple_logo_grey.svg.png" class="globolnav-list-img"></a>
-                    </div>
-                </li>
-                <li>
-                    <div class="">
-                        <a href="#">Sklep</a>
-                    </div>
-                </li>
-                <li>
-                    <div class="">
-                        <a href="#"></a>
-                    </div>
-                </li>
-                <li>
-                    <div class="">  
-                        <a href="#"></a>
-                    </div>
-                </li>
-           
+                <li><img src="logo.png" class="logoapple"></li>
+                <li>Sklep</li>
+                <li>Mac</li>
+                <li>iPad</li>
+                <li>iPhone</li>
+                <li>Watch</li>
+                <li>TV i Dom</li>
+                <li>AirPods</li>
+                <li>Rozrywka</li>
+                <li>Akcesoria</li>
+                <li>Warcie</li>
+                <li><img src="searchicon.png" class="navicon"></li>
+                <li><img src="shopbag.jpg" class="navicon"></li>
+
             </ul>
     </nav>
     <main>
@@ -42,7 +35,7 @@
                 </div>
                 <div class="herohrefwrapper">
                     <div class="herohref">
-                        <a href="#">Dowiedz sięwięcej ></a>
+                        <a href="#">Dowiedz sięWwięcej ></a>
                         <a href="#">Kup ></a>
                     </div>
                 </div>
