--- a/stronaapple/Apple.html
+++ b/stronaapple/Apple.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="herohrefwrapper">
                     <div class="herohref">
-                        <a href="#">Dowiedz sięWwięcej ></a>
+                        <a href="#">Dowiedz się więcej ></a>
                         <a href="#">Kup ></a>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="herohrefwrapper">
                     <div class="herohref">
-                        <a href="#">Dowiedz sięwięcej ></a>
+                        <a href="#">Dowiedz się więcej ></a>
                         <a href="#">Kup ></a>
                     </div>
                 </div>
@@ -65,13 +65,93 @@
                 </div>
                 <div class="herohrefwrapper">
                     <div class="herohref">
-                        <a href="#">Dowiedz sięwięcej ></a>
+                        <a href="#">Dowiedz się więcej ></a>
                         <a href="#">Kup ></a>
                     </div>
                 </div>
             </div>
         </section>
 
+
+
+        <footer>
+            <div class="stopka">
+                <div class="stopkacontent">
+                    <div class="stopkacolumn">
+                    <ul>
+                        <h3>Kupuj i poznawaj</h3>
+                        <li>Sklep</li>
+                        <li>Mac</li>
+                        <li>iPad</li>
+                        <li>iPhone</li>
+                        <li>Watch</li>  
+                        <li>AirPods</li>
+                        <li>TV i Dom</li>
+                        <li>AirTag</li>
+                        <li>Akcesoria</li>
+                        <li>Karty upominkowe</li>
+                    </ul>
+                    <ul>
+                        <h3>Portfel Apple</h3>
+                        <li>Apple Pay</li>
+                    </ul>
+                </div>
+                <div class="stopkacolumn">
+                    <ul>
+                        <h3>Konto</h3>
+                        <li>Obsługa Twojego Apple ID</li>
+                        <li>Konto w Apple Store</li>
+                        <li>iCloud.com</li>
+                    </ul>
+                    <ul>
+                        <h3>Rozrywka</h3>
+                        <li>Apple One</li>
+                        <li>Apple TV+</li>
+                        <li>Apple Music</li>
+                        <li>Apple Arcade</li>
+                        <li>App Store</li>
+                    </ul>
+                </div>
+                <div class="stopkacolumn">
+                    <ul>
+                        <h3>Apple Store</h3>
+                        <li>Aplikacja Apple Store</li>
+                        <li>Odnowione i certyfikowane</li>
+                        <li>Stan zamówienia</li>
+                        <li>Pomoc w zakupach</li>
+                    </ul>
+                </div>
+                <div class="stopkacolumn">
+                    <ul>
+                        <h3>Dla biznesu</h3>
+                        <li>Apple i biznes</li>
+                        <li>Kupuj do firmy</li>
+                    </ul>
+                    <ul>
+                        <h3>Dla edukacji</h3>
+                        <li>Apple i edukacja</li>
+                        <li>Zakupy na uczelnię</li>
+                    </ul>
+                </div>
+                <div class="stopkacolumn">
+                    <ul>
+                        <h3>Wartości Apple</h3>
+                        <li>Prywatność</li>
+                    </ul>
+                    <ul>
+                        <h3>O firmie Apple</h3>
+                        <li>Newsroom</li>
+                        <li>Apple Leadership</li>
+                        <li>Praca</li>
+                        <li>Gwarancja</li>
+                        <li>Inwestorzy</li>
+                        <li>Etyka i zgodność z prawem</li>
+                        <li>Kontakt z Apple</li>
+                    </ul>
+                </div>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
