--- a/stronaapple/Apple.html
+++ b/stronaapple/Apple.html
@@ -76,7 +76,15 @@
 
         <footer>
             <div class="stopka">
+                <section class="przypisy">
+                    <ul>
+                        <li>* Przy zakupie kwalifikującego się Maca lub iPada w Lokalizacji Uczestniczącej w Promocji Uprawniony Nabywca otrzyma kartę Apple Gift Card. Na jednego Uprawnionego Nabywcę może przy zakupie kwalifikującego się Maca lub kwalifikującego się iPada przypadać tylko jeden Produkt Promocyjny. Oferta jest ważna pod warunkiem dostępności produktów. Do wyczerpania zapasów. Z całym regulaminem można zapoznać się tutaj.</li><br>
+                        <li>Prezentowane treści są dostępne w apce Apple TV.</li><br>
+                        <li>Zestaw oferowanych funkcji może ulec zmianie. Niektóre funkcje, aplikacje i usługi mogą nie być dostępne we wszystkich regionach i językach.</li>
+                    </ul>
+                </section>
                 <div class="stopkacontent">
+                    
                     <div class="stopkacolumn">
                     <ul>
                         <h3>Kupuj i poznawaj</h3>
@@ -150,6 +158,21 @@
                     </ul>
                 </div>
                 </div>
+                <section class="koniecstopy">
+                    <div class="taktt">Inne sposoby zakupu: znajdź sprzedawcę w pobliżu. Lub zadzwoń pod numer 800 702 322.</div>
+                    <div class="wybierzkraj">Polska</div>
+                    <div class="footercopyr">
+                        <div>Copyright &copy; 2023 Apple Inc. Wszelkie prawa zastrzeżone.</div>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </section>
             </div>
         </footer>
     </main>
